@@ -947,6 +947,22 @@ BEGIN
                     197,271,10
 END
 
+IDD_RESOLVE DIALOGEX 0, 0, 244, 153
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_RESOLVELIST,"SysListView32",LVS_REPORT | 
+                    LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | 
+                    WS_TABSTOP,7,7,230,107
+    CONTROL         "Select / Deselect &All",IDC_SELECTALL,"Button",
+                    BS_AUTO3STATE | WS_TABSTOP,7,119,230,10
+    DEFPUSHBUTTON   "&OK",IDOK,73,133,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,131,133,50,14
+    PUSHBUTTON      "&Help",IDHELP,187,133,50,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1353,6 +1369,14 @@ BEGIN
         VERTGUIDE, 284
         TOPMARGIN, 7
         BOTTOMMARGIN, 210
+    END
+
+    IDD_RESOLVE, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 237
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 146
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1976,6 +2000,7 @@ STRINGTABLE
 BEGIN
     IDS_STATUSLIST_CONTEXT_ADD "Add"
     IDS_STATUSLIST_CONTEXT_EXPLORE "Explore to"
+    IDS_STATUSLIST_CONTEXT_RESOLVED "Resolved"
     IDS_STATUSLIST_LOCKBROKEN "Lock broken!"
     IDS_STATUSLIST_LOCKSTOLEN "Lock stolen by %s"
 END
