@@ -812,6 +812,12 @@
 					RelativePath=".\RepoCreateDlg.h">
 				</File>
 				<File
+					RelativePath=".\ResolveDlg.cpp">
+				</File>
+				<File
+					RelativePath=".\ResolveDlg.h">
+				</File>
+				<File
 					RelativePath=".\RevertDlg.cpp">
 				</File>
 				<File
